overflow issue fixed

--- a/src/Screens/Home/styles/Features.css
+++ b/src/Screens/Home/styles/Features.css
@@ -60,11 +60,11 @@
   /* features svg styles  */
   .six-line-svg {
     position: relative;
-    height: 500px;
+    /* height: 500px; */
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 700px;
+    /* width: 700px; */
   }
   
   .image-center {
@@ -72,9 +72,10 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 120px;
-    width: 120px;
-    /* background-color: aquamarine; */
+    height: 80px;
+    width: 80px;
+    border-radius: 50%;
+    transition: all 1s ease;
   }
   
   .image-end {
@@ -85,49 +86,54 @@
   
   .image1 {
     top: calc(50% - 150px);
-    left: calc(50% - 270px);
+    left: calc(50% - 220px);
     transform: translate(-50%, -50%);
   }
   
   .image2 {
     top: calc(50% -  150px);
-    left: calc(50% + 270px);
+    left: calc(50% + 220px);
     transform: translate(-50%, -50%);
   }
   
   .image3 {
     top: 50%;
-    left: calc(50% + 380px);
+    left: calc(50% + 220px);
     transform: translate(-50%, -50%);
   }
   
   .image4 {
     top: calc(50% + 150px);
-    left: calc(50% + 270px);
+    left: calc(50% + 220px);
     transform: translate(-50%, -50%);
   }
   
   .image5 {
     top: 50%;
-    left: calc(50% - 380px);
+    left: calc(50% - 220px);
     transform: translate(-50%, -50%);
   }
   
   .image6 {
     top: calc(50% + 150px);
-    left: calc(50% - 270px);
+    left: calc(50% - 220px);
     transform: translate(-50%, -50%);
   }
   .line {
     stroke-dasharray: 1000, 1000;
     stroke-dashoffset: 1000;
-    transition: stroke-dasharray 2s ease, stroke-dashoffset 2s ease;
+    transition:all 2s ease, all 2s ease ;
   }
   
   .six-line-svg:hover .line {
+    stroke-dasharray: 1000, 0;
     stroke-dashoffset: 0;
   }
   
   .six-line-svg:hover .image-end {
+    box-shadow: 0 2px 12px 0 white;
+  }
+
+  .six-line-svg:hover .image-center{
     box-shadow: 0 2px 12px 0 white;
   }
